# claude-dxt

./: .gitignore  .mcpbignore  README.md  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.json
scripts/: build.mjs  build_bundle.py  smoke-test.mjs  verify-package.mjs
server/: bootstrap.py  main.py
src/: index.js
tests/: bridge.e2e.test.js  config.test.js
